fixed some visual bugs in js code (show proper things after submitting comment, removing duplicated elements, footer not jumping to the top of the page while fetching data etc.)

--- a/css/style.css
+++ b/css/style.css
@@ -907,6 +907,8 @@ body {
 
 .footer-container {
   /* display: block; */
+  position: relative;
+  bottom: 0;
   text-align: center;
   margin: 2rem 0;
 }
